--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.2.1"
+        "@fortawesome/fontawesome-free": "^6.2.1",
+        "vue-router": "^2.8.1"
     }
 }
