--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.1",
-        "vue-router": "^2.8.1"
+        "vue-router": "^2.8.1",
+        "vuex": "^3.5.1"
     }
 }
