--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
-        "vue": "^2.5.17",
+        "vue": "^2.7.14",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@braid/vue-formulate": "^2.5.3",
         "@fortawesome/fontawesome-free": "^6.2.1",
-        "vue-router": "^2.8.1",
+        "vue-router": "^3.6.5",
+        "vuelidate": "^0.7.7",
+        "vuetify": "^2.6.14",
         "vuex": "^3.5.1"
     }
 }
